@@ -6,6 +6,7 @@
 #include "CubitMessage.hpp"
 #include "ProgressTool.hpp"
 #include "MeshExportInterface.hpp"
+#include "StopWatch.hpp"
 
 #include <cmath>
 #include <fstream>
@@ -142,6 +143,7 @@ bool CoreResultsVtkWriter::check_initialized()
 bool CoreResultsVtkWriter::write()
 {
   std::string log;
+  StopWatch StopWatch;
 
   if (this->checkLinkPossible())
   {
@@ -158,7 +160,8 @@ bool CoreResultsVtkWriter::write()
     write_mode = 2;
   }
   PRINT_INFO("%s", log.c_str());
-  
+  StopWatch.total("Duration of Writing Results into ParaView Format [ms]: ");
+
   return true;
 }
 
@@ -3616,21 +3619,6 @@ std::vector<std::vector<double>> CoreResultsVtkWriter::compute_integration_point
   return displacements;
 }
 
-
-bool CoreResultsVtkWriter::stopwatch(std::string label)
-{
-  const auto t_runtime_end = std::chrono::high_resolution_clock::now();
-  int t_runtime_duration = std::chrono::duration<double, std::milli>(t_runtime_end - t_runtime_start).count();
-  int t_runtime_round_duration = std::chrono::duration<double, std::milli>(t_runtime_end - t_runtime_last).count();
-  
-  t_runtime_last = std::chrono::high_resolution_clock::now();
-  
-  std::string log;
-  log =  label + " " + std::to_string(t_runtime_duration) + " " + std::to_string(t_runtime_round_duration) + "\n";
-  PRINT_INFO("%s", log.c_str());
-
-  return true;
-}
 
 //sorting of vectors
 template <typename T> 
