@@ -33,3 +33,4 @@
 
 ######### ------  Release 2024.7
 2024-08-13 fix cubit crash on reset using windows
+2024-08-14 work on reading frd in parallel
